--- a/olx_Back/package.json
+++ b/olx_Back/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
